--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jquery": "^3.5.1",
     "mdb-ui-kit": "^2.1.0",
     "mongoose": "^5.10.14",
     "morgan": "~1.9.1",
